Fix alignment of list item icons

--- a/src/List/style/index.styl
+++ b/src/List/style/index.styl
@@ -8,6 +8,7 @@
   width: 18px;
   margin-right: 7px;
   text-align: center;
+  align-self: center;
 }
 
 .react-spectrum-List-item-content {
